# samply-mcp

./: .gitignore  .samply-mcp-history  AGENTS.md  README.md  pyproject.toml
src/samply_mcp/: __init__.py  repl.py  runner.py  server.py  session.py  session_manager.py
src/samply_mcp/gecko/: __init__.py  parser.py  profile.py  symbolizer.py
tests/: conftest.py  test_architecture.py  test_e2e.py  test_integration.py  test_repl.py  test_runner.py  test_server.py  test_session.py  test_session_manager.py
tests/test_gecko/: __init__.py  test_profile.py  test_symbolizer.py
