[project]
name = "samply-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrian Braemer", email = "bradrian@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastmcp",
    "prompt-toolkit",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
samply-mcp = "samply_mcp.server:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["reference"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = ["reference"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
